--- a/qtermwidget-cafehaine-color-scheme/PKGBUILD
+++ b/qtermwidget-cafehaine-color-scheme/PKGBUILD
@@ -7,6 +7,7 @@ arch=('any')
 url=""
 depends=('qtermwidget')
 source=('CaféHaine.colorscheme')
+md5sums=('SKIP')
 
 package() {
 	install -Dm644 CaféHaine.colorscheme -t "$pkgdir/usr/share/qtermwidget5/color-schemes/"
